# mattijsmoens-sovereign-mcp

./: README.md  adversarial_benchmark.py  pyproject.toml
sovereign_mcp/: .integrity_lock.json  __init__.py  adaptive_shield.py  anti_patterns.py  consensus.py  frozen_namespace.py  output_gate.py  tool_updater.py
tests/: test_all.py  test_edge_cases.py
